--- a/package.json
+++ b/package.json
@@ -12,6 +12,30 @@
     "cookie-parser": "~1.0.1",
     "body-parser": "~1.0.0",
     "debug": "~0.7.4",
-    "jade": "~1.3.0"
-  }
+    "jade": "~1.3.0",
+    "ejs": "^1.0.0"
+  },
+  "devDependencies": {
+    "grunt": "^0.4.5",
+    "grunt-concurrent": "^0.5.0",
+    "grunt-contrib-clean": "^0.6.0",
+    "grunt-contrib-concat": "^0.5.0",
+    "grunt-contrib-copy": "^0.5.0",
+    "grunt-contrib-cssmin": "^0.10.0",
+    "grunt-contrib-uglify": "^0.5.1",
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-nodemon": "^0.3.0",
+    "grunt-shell": "^0.7.0",
+    "load-grunt-tasks": "^0.6.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/jsandoval81/main.git"
+  },
+  "author": "John Sandoval",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/jsandoval81/main/issues"
+  },
+  "homepage": "http://johnsandoval.us"
 }
