--- a/bower.json
+++ b/bower.json
@@ -3,6 +3,7 @@
   "dependencies": {
     "ember": "~2.8.0",
     "ember-cli-shims": "0.1.1",
-    "gsap": "~1.19.0"
+    "gsap": "~1.19.0",
+    "scrollmagic": "~2.0.5"
   }
 }
