--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "ember-cli-uglify": "^1.2.0",
     "ember-data": "^2.8.0",
     "ember-export-application-global": "^1.0.5",
-    "ember-gsap": "0.0.2",
+    "ember-gsap": "1.0.0-beta1",
     "ember-load-initializers": "^0.5.1",
     "ember-resolver": "^2.0.3",
     "ember-scrollmagic": "0.0.8",
